--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -11,7 +11,7 @@ html { box-sizing: border-box; }
 .border-{{c[0]}} { border-color: {{ c[1] }} !important; }
 .text-{{c[0]}}   { color: {{ c[1] }}; }
 .text-{{c[0]}} a { color: {{ c[1] }}; }
-.bg-{{c[0]}}     { background-color: {{ c[1] }} !important; }
+.bg-{{c[0]}}     { background: {{ c[1] }} !important; }
 {% endfor %}
 
 /* ----- per-post colors! ----- */
@@ -20,7 +20,7 @@ html { box-sizing: border-box; }
   {% capture bg %}{% if site.colors[node.bg] %}{{ site.colors[node.bg] }}{% else %}{{ node.bg }}{% endif %}{% endcapture %}
   {% capture fg %}{% if site.colors[node.color] %}{{ site.colors[node.color] }}{% else %}{{ node.color }}{% endif %}{% endcapture %}
   nav .p-{{id}} { border-color: {{ bg }}; }
-  #{{id}} { background-color: {{ bg }} !important; color: {{ fg }}; }
+  #{{id}} { background: {{ bg }} !important; color: {{ fg }}; }
   #{{id}} a { color: {{ fg }}; }
   #{{id}} .sectiondivider { color: {{ bg }}; }
 {% endfor %}
@@ -257,7 +257,7 @@ nav ul li:hover, nav ul li.active {
 .longlist { font-size: 14px !important; }
 .longlist li { margin-bottom: 3px; }
 
-
+/*----- -----*/
 
 /* ----- fork on github banner ----- */
 #forkongithub a {
