--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -5,8 +5,9 @@
 
 @media only screen and (max-width: 768px) {
 	#intro{
-		background: url();
-		max-height: 200px;
+		background: #fff;
+		min-height: 200px;
+		background-position: right;
 
 	}
 	}
